# autoresearcher

./: .gitignore  .linear-worker.json  .webhook-test-verified  .webhook-verification-355f8ae3.txt  .webhook-verification-953428ea.txt  .webhook-verification-b221d386.txt  .webhook-verification-b5c1fd91.txt  CONTRIBUTING.md  EXPERIMENT_REPORT_MOR64_b9419a02.md  EXPERIMENT_SUMMARY_MOR37_45e992f7.md  EXPERIMENT_SUMMARY_MOR45_14cfac28.md  EXPERIMENT_SUMMARY_MOR46_b540e4ed.md  EXPERIMENT_SUMMARY_MOR60_b540e4ed.md  LICENSE  LINEAR_TELEGRAM_E2E_VERIFICATION.md  README.md  SESSION_REPORT_00686978.md  SESSION_REPORT_0d1c13eb.md  SESSION_REPORT_0fd6a192.md  SESSION_REPORT_12080973.md  SESSION_REPORT_124dae66.md  SESSION_REPORT_1be99dfb.md  SESSION_REPORT_28154d91.md  SESSION_REPORT_2b3fdc36.md  SESSION_REPORT_303fbdef.md  SESSION_REPORT_3284829e.md  SESSION_REPORT_33d47ffb.md  SESSION_REPORT_37e4e772.md  SESSION_REPORT_3c1940b7.md  SESSION_REPORT_454a588f.md  SESSION_REPORT_47bce9d8.md  SESSION_REPORT_4c5b03fe.md  SESSION_REPORT_527270d6.md  SESSION_REPORT_594b02a1.md  SESSION_REPORT_6775b301.md  SESSION_REPORT_6aec2836.md  SESSION_REPORT_7cccec1f.md  SESSION_REPORT_7cd38228.md  SESSION_REPORT_81a7c14d.md  SESSION_REPORT_87004639.md  (+114 more)
.github/: CODEOWNERS
config/: default.json
experiments/05-ooh-creative/: EXPERIMENT_SUMMARY.md  EXPERIMENT_SUMMARY_MOR17.md  EXPERIMENT_SUMMARY_MOR35.md  EXPERIMENT_SUMMARY_MOR39.md  EXPERIMENT_SUMMARY_MOR57.md  README.md  compose.py  config.json  creative.py  eval.py  generate.py  post_results.py  program.md  pyproject.toml  results.tsv  runner.py
(+3200 files in other folders)
