[project]
name = "autoresearcher"
version = "0.1.0"
description = "AI-powered autonomous research and optimization platform"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["autoresearcher"]

[tool.coverage.report]
show_missing = true
fail_under = 80
