[project]
name = "ooh-creative-experiment"
version = "0.1.0"
description = "OOH advertising creative optimization with parallel execution"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["../../src"]
